# swiftlint-poc

./: .gitignore  .swiftlint.yml  MODULE.bazel  WORKSPACE
SwiftLintPOC/: SceneDelegate.swift  ViewController.swift
SwiftLintPOC.xcodeproj/: project.pbxproj
SwiftLintPOC.xcodeproj/project.xcworkspace/xcuserdata/rborquezdiaz.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftLintPOC.xcodeproj/xcuserdata/rborquezdiaz.xcuserdatad/xcschemes/: xcschememanagement.plist
swiftlint-poc/: AppDelegate.swift  ViewController.swift
swiftlint-poc.xcodeproj/: project.pbxproj
swiftlint-poc.xcodeproj/project.xcworkspace/xcuserdata/rborquezdiaz.xcuserdatad/: UserInterfaceState.xcuserstate
